hope i dont break it

--- a/lexer_module/Makefile
+++ b/lexer_module/Makefile
@@ -6,9 +6,15 @@
 #    By: lwidmer <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/01 16:53:37 by lwidmer           #+#    #+#              #
-#    Updated: 2023/04/01 17:57:41 by lwidmer          ###   ########.fr        #
+#    Updated: 2023/04/03 16:58:58 by lwidmer          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
+lex:
+	cc lexer_main.c && ./a.out "< infile | infile2 echo -n  'e >>c  ec bla' > outfile    "
+
+readline:
+	cc readline.c -lreadline
 
 lexer:
 	cc lexer_main.c && ./a.out "< infile echo 'hello world' > outfile"
