new parser logic

--- a/lexer_module/Makefile
+++ b/lexer_module/Makefile
@@ -12,7 +12,7 @@
 
 NAME = lexer
 
-FILENAMES = lexer_main utils tokens check_token_list
+FILENAMES = lexer_main utils tokens check_token_list parse
 
 SRCS_DIR = ./
 OBJS_DIR = ./
@@ -21,28 +21,34 @@ SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILENAMES)))
 OBJS= $(addprefix $(OBJS_DIR), $(addsuffix .o, $(FILENAMES)))
 
 ${NAME}: ${OBJS}
-	cc -o ${NAME} $^
+	cc -o ${NAME} $^ -lreadline
 
 .c.o: ${SRCS}
-	cc -c -o $@ $< 
+	cc -c -o $@ $<
+
+simple_test: ${NAME}
+	./lexer "echo    hello world  "
 
 test: ${NAME}
-	./lexer "< infile || infile2 'echo' -n		 'e >>c  ec bla' >> outfile    "
+	./lexer "< infile || infile2 'echo' -n	| 'e >>c  ec bla' >> outfile    "
 
 quotes: ${NAME}
-	./lexer "echo ''' < hello''' "
+	./lexer "echo ''    ' < hello''' "
 
 no_spaces: ${NAME}
 	./lexer "echo <infile'helloworld'>outfile"
 
-empty_quotes:
+empty_quotes: ${NAME}
 	./lexer "echo ''hello"
 
 simple_quotes: ${NAME}
-	./lexer "echo 'hello world'>"
+	./lexer "echo 'hello world'test'hello'"
 
-simple_test: ${NAME}
-	./lexer "< infile hello (woooooww) > outfile"
+dollar: ${NAME}
+	./lexer 
+
+memory: ${NAME}
+	valgrind --leak-check=full ./lexer "bla vla 'hello' << || &&     "
 
 readline:
 	cc readline.c -lreadline
