added unset, cd and structure around builtins

--- a/builtins/Makefile
+++ b/builtins/Makefile
@@ -1,5 +1,4 @@
-FILENAMES = export
-
+FILENAMES = builtins builtins_wrappers export cd
 SRCS = $(addsuffix .c, $(FILENAMES))
 OBJS = $(addsuffix .o, $(FILENAMES))
 
